Temporarily hid footer contents

--- a/cienciasalud/bluetheme/static/manifest.cfg
+++ b/cienciasalud/bluetheme/static/manifest.cfg
@@ -1,3 +1,6 @@
 [theme]
 title = A Blue Theme
 description = A blue theme for Plone
+
+[theme:parameters]
+ajax_load = python: 'ajax_load' in request.form
